# try-cpp-modules

./: .clangd  CMakeLists.txt  README.md
src/: main.cpp  mymod.cppm
